# welldone-backend

./: .gitignore  Dockerfile  init.sh  pyproject.toml  requirements.txt  test.db
.ebextensions/: 01_fastapi.config
.elasticbeanstalk/: config.yml
scripts/: 1_add_category_and_ingredients.py  2_add_tool_method_heating.py  3_add_cooking_settings.py  add_category_and_ingredients.py  add_cooking_settings.py  add_tool_method_heating.py  cooking_settings.csv
src/: main.py
src/api/v1/: deps.py  router.py
src/api/v1/endpoints/: auth.py  categories.py  cooking_methods.py  cooking_settings.py  cooking_tools.py  feedback.py  heating_methods.py  ingredients.py  timers.py  users.py
src/core/: config.py  database.py  enums.py  s3.py
src/models/: common.py  models.py  response.py  user.py
src/utils/: utils.py
