[tool.poetry]
name = "welldone-backend"
version = "0.1.0"
description = ""
authors = ["PrimadonnaGit <jwhyun2215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlmodel = "^0.0.22"
python-dateutil = "^2.9.0.post0"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
