[tool.poetry]
name = "welldone-backend"
version = "0.1.0"
description = ""
authors = ["PrimadonnaGit <jwhyun2215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlmodel = "^0.0.22"
python-dateutil = "^2.9.0.post0"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pyjwt = "^2.10.1"
pydantic = { extras = ["email"], version = "^2.10.3" }
python-multipart = "^0.0.19"
bcrypt = "4.0.1"
boto3 = "^1.35.80"
filetype = "^1.2.0"
pillow = "^11.0.0"
awsebcli = "^3.21.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
